--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
   <head>
     <meta name="google-site-verification" content="-sHggPKcuBm5elBbfNlyZN5dprhrY9VIRz6gg7S_qLs"/>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
     <title>My Title</title>
   </head>
   <body>
-  	Coming Soon: JSMobile
+  	<p>Coming Soon: JSMobile</p>
+  	<div id="bg">
+	  	<img src="public/img/background.jpg" id="bg" alt="">
+  	</div>
+  	<img src="public/img/logo.png" id="logo" alt="A Logo Was Here">
   </body>
 </html>
