--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
   <head>
     <meta name="google-site-verification" content="-sHggPKcuBm5elBbfNlyZN5dprhrY9VIRz6gg7S_qLs"/>
     <link rel="stylesheet" href="public/css/style.css">
-    <title>My Title</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="manifest" href="favicons/manifest.json">
+    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">    
+    <title>JSMobile</title>
   </head>
   <body>
   	<p>Coming Soon: JSMobile</p>
   	<div id="bg">
-	  	<img src="public/img/background.jpg" id="bg" alt="">
+	  	<img src="public/img/background.jpg" id="fixed-bg" alt="">
   	</div>
   	<img src="public/img/logo.png" id="logo" alt="A Logo Was Here">
   </body>
