Size background image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
 
-  	<img src="public/img/background.jpg" id="fixed-bg" alt="">
+  	<!-- <img src="public/img/background.jpg" id="fixed-bg" alt=""> -->
     <img src="public/img/logo.png" id="logo" alt="A Logo Was Here">
 
     <div data-tab-wrapper>
