Refactor logo class

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
   	<!-- <img src="public/img/background.jpg" id="fixed-bg" alt=""> -->
-    <img src="public/img/logo.png" id="logo" alt="A Logo Was Here">
+    <img src="public/img/logo.png" class="logo" alt="A Logo Was Here">
 
     <div data-tab-wrapper>
       <ul class="tab-list" data-tablist>
