Show div on hover

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <h1>Portfolio</h1>
             <ul>
               <li class="popout-img" id="connections"><a href="#">Connections</a></li>
-              <li class="popout-img"><a href="#">ANML</a></li>
-              <li class="popout-img"><a href="#">Looplio</a></li>
-              <li class="popout-img"><a href="#">ViMeow</a></li>
+              <li class="popout-img" id="anml"><a href="#">ANML</a></li>
+              <li class="popout-img" id="looplio"><a href="#">Looplio</a></li>
+              <li class="popout-img" id="vimeow"><a href="#">ViMeow</a></li>
             </ul>
           </section>
 
@@ -86,8 +86,7 @@
       </div>
 
       
-      <div id="popout">
-          <p>WTF</p>
+      <div id="popout">          
       </div>
 
     </div>
