Style home page

--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
           <section id="tab-1" class="tab-panel" data-tabpanel>
             <h1>Home</h1>
             
+            <div class="bitmoji">
+              <img src="public/img/bitmoji.GIF">
+            </div>
 
-            <p>Hi, I'm Jillian. I build iOS apps.</p>
+            <div class="home-info">
+              <p>Hi, I'm Jillian. I build iOS apps. Occasionally, I also build websites. Get in touch if you're interested in hiring me to build either of these (or both!) for you.</p>
+            </div>
           </section>
 
           <section id="tab-2" class="tab-panel" data-tabpanel>
