Edit about page content

--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@
 
           <section id="tab-3" class="tab-panel" data-tabpanel>
             <h1>About</h1>            
-            <p>Jillian Somera has been an iOS developer since 2015. When she isn't programming, you can find her eating her way through Chicago or playing around the city with her band.</p>
+            <p>
+              Jillian Somera has been an iOS developer since 2015. She is an alumna of Dev Bootcamp, where she learned about full-stack web development. She also has a jazz guitar degree from Columbia College Chicago.
+            </p>
+
+            <p>
+              When she isn't programming, you can find her eating her way through Chicago or playing around the city with her rock band, Jillian Somera and the Beta Option.
+            </p>
           </section>
 
           <section id="tab-4" class="tab-panel" data-tabpanel>
