Edit home styling

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Arvo:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arvo:700|Cabin:700" rel="stylesheet">
+
     <title>JSMobile</title>
 
   </head>
@@ -47,7 +51,10 @@
             </div>
 
             <div class="home-info">
-              <p>Hi, I'm Jillian. I build iOS apps. Occasionally, I also build websites. Get in touch if you're interested in hiring me to build either of these (or both!) for you.</p>
+              <p>
+                <span class="title">Hi, I'm Jillian.</span>
+                I build iOS apps. Occasionally, I also build websites. Get in touch if you're interested in hiring me to build either of these (or both!) for you.
+              </p>
             </div>
           </section>
 
