Update bitmoji image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             <h1>Home</h1>
             
             <div class="bitmoji">
-              <img src="public/img/bitmoji.GIF">
+              <!-- <img src="public/img/bitmoji.GIF"> -->
+              <img src="public/img/iphone-bitmoji.gif">
             </div>
 
             <div class="home-info">
