Remove bitmoji and style header

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Arvo:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arvo:700|Cabin:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merienda:700|Yanone+Kaffeesatz" rel="stylesheet">
 
     <title>JSMobile</title>
 
@@ -44,23 +44,28 @@
           </ul>
 
           <section id="tab-1" class="tab-panel" data-tabpanel>
-            <h1>Home</h1>
+            <!-- <h1>Home</h1> -->
             
-            <div class="bitmoji">
-              <!-- <img src="public/img/bitmoji.GIF"> -->
-              <img src="public/img/iphone-bitmoji.gif">
+
+            <div name="profile-header">
+              <div class="profile-pic">
+                <img src="public/img/website-profile-pic.png">
+              </div>
+
+              <div class="name">
+                <span class="title">Hi, <br/>I'm Jillian.</span>
+              </div>
             </div>
 
             <div class="home-info">
               <p>
-                <span class="title">Hi, I'm Jillian.</span>
-                I build iOS apps. Occasionally, I also build websites. Get in touch if you're interested in hiring me to build either of these (or both!) for you.
+                I build iOS apps. Occasionally, I also build websites. <br/> Get in touch if you're interested in hiring me to build either of these (or both!) for you.
               </p>
             </div>
           </section>
 
           <section id="tab-2" class="tab-panel" data-tabpanel>
-            <h1>Portfolio</h1>
+            <!-- <h1>Portfolio</h1> -->
             <ul>
               <li class="popout-img" id="connections"><a href="#">Connections</a></li>
               <li class="popout-img" id="anml"><a href="#">ANML</a></li>
@@ -70,7 +75,7 @@
           </section>
 
           <section id="tab-3" class="tab-panel" data-tabpanel>
-            <h1>About</h1>            
+            <!-- <h1>About</h1>             -->
             <p>
               Jillian Somera has been an iOS developer since 2015. She is an alumna of Dev Bootcamp, where she learned about full-stack web development. She also has a jazz guitar degree from Columbia College Chicago.
             </p>
@@ -82,7 +87,7 @@
 
           <section id="tab-4" class="tab-panel" data-tabpanel>
             <div class="contact">
-              <h1>Let's Work Together</h1>
+              <!-- <h1>Let's Work Together</h1> -->
               <form>
                 <label for="fullname">Full Name</label>
                 <input type="text" id="fullname" name="fullname" placeholder="Enter your full name">
