Adjust img size

--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
           <section id="tab-2" class="tab-panel" data-tabpanel>
             <!-- <h1>Portfolio</h1> -->
             <ul>
-              <li class="popout-img" id="connections"><a href="#">Connections</a></li>
+              <li class="popout-img" id="filld">
+                <a href="#">React Web App for Ones and Zeroes LLC</a>
+              </li>
+              <li class="popout-img" id="connections">
+                <a href="#">Connections</a>
+              </li>
               <li class="popout-img" id="anml"><a href="#">ANML</a></li>
               <li class="popout-img" id="looplio"><a href="#">Looplio</a></li>
               <li class="popout-img" id="vimeow"><a href="#">ViMeow</a></li>
